--- a/index.html
+++ b/index.html
@@ -152,10 +152,8 @@
         <a class="logo" href="https://instagram.com/neri_ig?igshid=YmMyMTA2M2Y="><img id="imagenLogo" src="logoInstagram.png"></a>
         -->
 
+        <a class="logo" href="http://instagram.com/_u/neri_ig/"><img id="imagenLogo" src="logoInstagram.png"></a>
 
-
-        <a href="http://instagram.com/_u/neri_ig/">Link to instagram page</a>
-        <a href="instagram://user?username=neri_ig/">Link to instagram Profile</a>
 
     </div>
 </footer>
