--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
 
         <div class="teknofilos">
-            <a class="logo" href="index.html"><img src="logo.png"></a>
+            <a class="logo" href="index.html"><img alt="logo" src="logo.png"></a>
 
 
 
@@ -252,7 +252,7 @@
 
 
 
-            <a id="enlaceInstagram" class="logo" href="http://instagram.com/_u/neri_ig/"><img id="imagenLogo"
+            <a id="enlaceInstagram" class="logo" href="http://instagram.com/_u/neri_ig/"><img alt="logo instagram" id="imagenLogo"
                     src="logoInstagram.png"></a>
 
 
