--- a/index.html
+++ b/index.html
@@ -147,49 +147,49 @@
 
 
 
-            <img alt="surfero"              src="fotosRedimensionadas/1.jpg" onclick="openOverlayV('fotosRedimensionadas/1.jpg')">
-            <img alt="familia puest de sol" src="fotosRedimensionadas/45.jpg" onclick="openOverlayH('fotosRedimensionadas/45.jpg')">
-            <img alt="surfero"              src="fotosRedimensionadas/2.jpg" onclick="openOverlayV('fotosRedimensionadas/2.jpg')">
-            <img alt="surfero surfeando"    src="fotosRedimensionadas/4.jpg" onclick="openOverlayH('fotosRedimensionadas/4.jpg')">
-            <img alt="comunion"             src="fotosRedimensionadas/23.jpg" onclick="openOverlayV('fotosRedimensionadas/23.jpg')">
+            <img alt="surfero"              src="fotos/1.jpg" onclick="openOverlayV('fotos/1.jpg')">
+            <img alt="familia puest de sol" src="fotos/45.jpg" onclick="openOverlayH('fotos/45.jpg')">
+            <img alt="surfero"              src="fotos/2.jpg" onclick="openOverlayV('fotos/2.jpg')">
+            <img alt="surfero surfeando"    src="fotos/4.jpg" onclick="openOverlayH('fotos/4.jpg')">
+            <img alt="comunion"             src="fotos/23.jpg" onclick="openOverlayV('fotos/23.jpg')">
 
 
         </div>
 
         <div class="column">
-            <img alt="surfero surfeando"    src="fotosRedimensionadas/12.jpg" onclick="openOverlayH('fotosRedimensionadas/12.jpg')">
-            <img alt="bebé"                 src="fotosRedimensionadas/41.jpg" onclick="openOverlayV('fotosRedimensionadas/41.jpg')">
-            <img alt="mano"                 src="fotosRedimensionadas/8.jpg" onclick="openOverlayH('fotosRedimensionadas/8.jpg')">
-            <img alt="familia junto al mar" src="fotosRedimensionadas/13.jpg" onclick="openOverlayH('fotosRedimensionadas/13.jpg')">
-            <img alt="surfero"              src="fotosRedimensionadas/10.jpg" onclick="openOverlayH('fotosRedimensionadas/10.jpg')">
-            <img alt="comunión"             src="fotosRedimensionadas/22.jpg" onclick="openOverlayV('fotosRedimensionadas/22.jpg')">
-            <img alt="embarazada"           src="fotosRedimensionadas/39.jpg" onclick="openOverlayH('fotosRedimensionadas/39.jpg')">
-
-
-
-
-        </div>
-
-
-        <div class="column">
-            <img alt="madre e hijo" src="fotosRedimensionadas/17.jpg" onclick="openOverlayV('fotosRedimensionadas/17.jpg')">
-            <img alt="madre e hijo" src="fotosRedimensionadas/18.jpg" onclick="openOverlayV('fotosRedimensionadas/18.jpg')">
-            <img alt="bebé"         src="fotosRedimensionadas/18.JPG" onclick="openOverlayV('fotosRedimensionadas/18.JPG')">
-            <img alt="bebé"         src="fotosRedimensionadas/20.jpg" onclick="openOverlayH('fotosRedimensionadas/20.jpg')">
-            <img alt="f14"          src="fotosRedimensionadas/20.jpg" onclick="openOverlayH('fotosRedimensionadas/20.jpg')">
+            <img alt="surfero surfeando"    src="fotos/12.jpg" onclick="openOverlayH('fotos/12.jpg')">
+            <img alt="bebé"                 src="fotos/41.jpg" onclick="openOverlayV('fotos/41.jpg')">
+            <img alt="mano"                 src="fotos/8.jpg" onclick="openOverlayH('fotos/8.jpg')">
+            <img alt="familia junto al mar" src="fotos/13.jpg" onclick="openOverlayH('fotos/13.jpg')">
+            <img alt="surfero"              src="fotos/10.jpg" onclick="openOverlayH('fotos/10.jpg')">
+            <img alt="comunión"             src="fotos/22.jpg" onclick="openOverlayV('fotos/22.jpg')">
+            <img alt="embarazada"           src="fotos/39.jpg" onclick="openOverlayH('fotos/39.jpg')">
 
 
 
 
         </div>
 
+
         <div class="column">
-            <img alt="comunión" src="fotosRedimensionadas/26.jpg" onclick="openOverlayH('fotosRedimensionadas/26.jpg')">
-            <img alt="bautizo"  src="fotosRedimensionadas/27.jpg" onclick="openOverlayH('fotosRedimensionadas/27.jpg')">
-            <img alt="familia"  src="fotosRedimensionadas/28.jpg" onclick="openOverlayH('fotosRedimensionadas/28.jpg')">
-            <img alt="bautizo"  src="fotosRedimensionadas/29.jpg" onclick="openOverlayH('fotosRedimensionadas/29.jpg')">
-            <img alt="familia"  src="fotosRedimensionadas/31.jpg" onclick="openOverlayV('fotosRedimensionadas/31.jpg')">
-            <img alt="bebé"     src="fotosRedimensionadas/20.jpg" onclick="openOverlayH('fotosRedimensionadas/20.jpg')">
+            <img alt="madre e hijo" src="fotos/17.jpg" onclick="openOverlayV('fotos/17.jpg')">
+            <img alt="madre e hijo" src="fotos/18.jpg" onclick="openOverlayV('fotos/18.jpg')">
+            <img alt="bebé"         src="fotos/18.JPG" onclick="openOverlayV('fotos/18.JPG')">
+            <img alt="bebé"         src="fotos/20.jpg" onclick="openOverlayH('fotos/20.jpg')">
+            <img alt="f14"          src="fotos/20.jpg" onclick="openOverlayH('fotos/20.jpg')">
+
+
+
+
+        </div>
+
+        <div class="column">
+            <img alt="comunión" src="fotos/26.jpg" onclick="openOverlayH('fotos/26.jpg')">
+            <img alt="bautizo"  src="fotos/27.jpg" onclick="openOverlayH('fotos/27.jpg')">
+            <img alt="familia"  src="fotos/28.jpg" onclick="openOverlayH('fotos/28.jpg')">
+            <img alt="bautizo"  src="fotos/29.jpg" onclick="openOverlayH('fotos/29.jpg')">
+            <img alt="familia"  src="fotos/31.jpg" onclick="openOverlayV('fotos/31.jpg')">
+            <img alt="bebé"     src="fotos/20.jpg" onclick="openOverlayH('fotos/20.jpg')">
 
 
 
