--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Author: Hector Calvo Alfosea,
+    <meta name="description" content="Author: Hector Calvo Alfosea,
     Illustrator: Neri NeriJuarezFotografía, Category: Photos, Fotos, Fotografia,
     Length: 5 paginas">
-    <script src="https://kit.fontawesome.com/a5dbac55d8.js" crossorigin="anonymous"></script>   
-     <link rel="stylesheet" href="estilo.css">
-    
-    <script src="./script.js"></script>
+
     <title>NeriJuarezFotografía</title>
 
 
@@ -52,10 +49,12 @@
 
 
 
+
+
         </div>
 
-
 -->
+
 
 
 
@@ -265,5 +264,10 @@
 
 
 </body>
+
+
+<script src="https://kit.fontawesome.com/a5dbac55d8.js" crossorigin="anonymous" async></script>   
+<link rel="stylesheet" href="estilo.css" async>
+<script src="./script.js" async></script>
 
 </html>
