--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 </body>
 
 
-<script src="https://kit.fontawesome.com/a5dbac55d8.js" crossorigin="anonymous" async></script>   
+<!--<script src="https://kit.fontawesome.com/a5dbac55d8.js" crossorigin="anonymous" async></script> -->  
 
 <script src="./script.js" async></script>
 
