--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
 
 
     <div id="overlayH">
-        <img id="overlayImageH" src="1.jpg">
+        <img id="overlayImageH" src=" fotos/1.jpg">
         <span id="closeButton">&times;</span>
         <img src="logo.png" class="imagenLogo">
     </div>
 
 
     <div id="overlayV">
-        <img id="overlayImageV" src="1.jpg">
+        <img id="overlayImageV" src=" fotos/1.jpg">
         <span id="closeButton">&times;</span>
         <img src="logo.png" class="imagenLogo">
     </div>
