--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     Illustrator: Neri NeriJuarezFotografía, Category: Photos, Fotos, Fotografia,
     Length: 5 paginas">
     <link rel="stylesheet" href="estilo.css" async>
+
     <title>NeriJuarezFotografía</title>
 
 
@@ -22,7 +23,7 @@
     <header>
 
         <div class="teknofilos">
-            <a class="logo" href="index.html"><img alt="logo" src="logo.png"></a>
+            <a class="logo" href="index.html"><img alt="logo" src="fotos/logo.png"></a>
 
 
 
@@ -84,7 +85,7 @@
                 <li class="link" onclick="abrirSubmenu()"><a href="#">SOCIAL</a></li>
                 <li class="link" onclick="cerrarSubMenu()"><a href="#">GASTRONOMÍA</a></li>
                 <li class="link" onclick="cerrarSubMenu()"><a href="#">PRODUCTO</a></li>
-                <li class="link" onclick="cerrarSubMenu()"><a href="contacto.html">CONTACTO</a></li>
+                <li class="link" onclick="cerrarSubMenu()"><a href="paginas/contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
 
@@ -93,7 +94,7 @@
         <nav class="submenu" id="sub" onmouseover="abrirSubmenu()">
             <ul class="lista">
                 <li>
-                    <a class="link linksub" href="boda.html">BODA</a>
+                    <a class="link linksub" href="paginas/boda.html">BODA</a>
                 </li>
                 <li>
                     <a class="link linksub" href="#">BAUTIZO</a>
@@ -123,16 +124,16 @@
 
 
     <div id="overlayH">
-        <img id="overlayImageH" src=" fotos/1.jpg">
+        <img id="overlayImageH" src="fotos/1.jpg">
         <span id="closeButton">&times;</span>
-        <img src="logo.png" class="imagenLogo">
+        <img src="fotos/logo.png" class="imagenLogo">
     </div>
 
 
     <div id="overlayV">
-        <img id="overlayImageV" src=" fotos/1.jpg">
+        <img id="overlayImageV" src="fotos/1.jpg">
         <span id="closeButton">&times;</span>
-        <img src="logo.png" class="imagenLogo">
+        <img src="fotos/logo.png" class="imagenLogo">
     </div>
 
 
@@ -255,7 +256,7 @@
 
 
             <a id="enlaceInstagram" class="logo" href="http://instagram.com/_u/neri_ig/"><img alt="logo instagram" id="imagenLogo"
-                    src="logoInstagram.png"></a>
+                    src="fotos/logoInstagram.png"></a>
 
 
         </div>
@@ -266,7 +267,7 @@
 </body>
 
 
-<!--<script src="https://kit.fontawesome.com/a5dbac55d8.js" crossorigin="anonymous" async></script> -->  
+<!--<script src="https://kit.fontawesome.com/a5dbac55d8.js" crossorigin="anonymous" async></script>-->   
 
 <script src="./script.js" async></script>
 
