--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             <ul class="list">
                 <li class="link" onclick="abrirSubmenu()"><a href="#">SOCIAL</a></li>
                 <li class="link" onclick="cerrarSubMenu()"><a href="#">GASTRONOMÍA</a></li>
-                <li class="link" onclick="cerrarSubMenu()"><a href="#">PRODUCTO</a></li>
-                <li class="link" onclick="cerrarSubMenu()"><a href="paginas/contacto.html">CONTACTO</a></li>
+                <li class="link" onclick="cerrarSubMenu()"><a href="dev.html">PRODUCTO</a></li>
+                <li class="link" onclick="cerrarSubMenu()"><a href="contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
 
