--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <li class="subsub">FAMILIA</li>
             </ul>
             <li class="submovil" onclick="cerrarSubmenuSocial()">GASTRONOMÍA</li>
-            <li class="submovil" onclick="cerrarSubmenuSocial()"><a href="dev.html">PRODUCTO</a></li>
+            <li class="submovil" onclick="cerrarSubmenuSocial()">PRODUCTO</li>
             <li class="submovil" onclick="cerrarSubmenuSocial()">CONTACTO</li>
         </ul>
 
