--- a/index.html
+++ b/index.html
@@ -82,28 +82,28 @@
 
         <nav>
             <ul class="list">
-                <li class="link" onclick="abrirSubmenu()"><a href="#">SOCIAL</a></li>
-                <li class="link" onclick="cerrarSubMenu()"><a href="#">GASTRONOMÍA</a></li>
-                <li class="link" onclick="cerrarSubMenu()"><a href="dev.html">PRODUCTO</a></li>
-                <li class="link" onclick="cerrarSubMenu()"><a href="contacto.html">CONTACTO</a></li>
+                <li class="link" onclick="toggleSubmenu()"><a href="#">Social</a></li>               
+                <li class="link" onclick="cerrarSubMenu()"><a href="#">Gastronomía</a></li>
+                <li class="link" onclick="cerrarSubMenu()"><a href="dev.html">Vídeo</a></li>
+                <li class="link" onclick="cerrarSubMenu()"><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
 
 
 
-        <nav class="submenu" id="sub" onmouseover="abrirSubmenu()">
+        <nav class="submenu" id="sub">
             <ul class="lista">
                 <li>
-                    <a class="link linksub" href="paginas/boda.html">BODA</a>
+                    <a class="link linksub" href="paginas/boda.html">Boda</a>
                 </li>
                 <li>
-                    <a class="link linksub" href="#">BAUTIZO</a>
+                    <a class="link linksub" href="#">Bautizo</a>
                 </li>
                 <li>
-                    <a class="link linksub" href="#">COMUNIÓN</a>
+                    <a class="link linksub" href="#">Comunión</a>
                 </li>
                 <li>
-                    <a class="link linksub" href="#">FAMILIA</a>
+                    <a class="link linksub" href="#">Familia</a>
                 </li>
             </ul>
         </nav>
@@ -150,7 +150,7 @@
 
 
 
-            <img alt="surfero"              src="fotos/1.jpg" onclick="openOverlayV('fotos/1.jpg')">
+            <img alt="surfero"              src="fotos/1_reducida.jpg" onclick="openOverlayV('fotos/1.jpg')">
             <img alt="familia puest de sol" src="fotos/45.jpg" onclick="openOverlayH('fotos/45.jpg')">
             <img alt="surfero"              src="fotos/2.jpg" onclick="openOverlayV('fotos/2.jpg')">
             <img alt="surfero surfeando"    src="fotos/4.jpg" onclick="openOverlayH('fotos/4.jpg')">
@@ -255,7 +255,7 @@
 
 
 
-            <a id="enlaceInstagram" class="logo" href="http://instagram.com/_u/neri_ig/"><img alt="logo instagram" id="imagenLogo"
+            <a id="enlaceInstagram" class="logo" href="http://instagram.com/_u/neri_juarez_fotografia"><img alt="logo instagram" id="imagenLogo"
                     src="fotos/logoInstagram.png"></a>
 
 
