--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 
 
-            <img alt="surfero"              src="fotos/1_reducida.jpg" onclick="openOverlayV('fotos/1.jpg')">
+            <img alt="surfero"              src="fotos/1.jpg" onclick="openOverlayV('fotos/1.jpg')">
             <img alt="familia puest de sol" src="fotos/45.jpg" onclick="openOverlayH('fotos/45.jpg')">
             <img alt="surfero"              src="fotos/2.jpg" onclick="openOverlayV('fotos/2.jpg')">
             <img alt="surfero surfeando"    src="fotos/4.jpg" onclick="openOverlayH('fotos/4.jpg')">
