--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
 
         <div class="teknofilos">
-            <a class="logo" href="index.html"><img alt="logo" src="fotos/logo.png"></a>
+            <a class="logo" href="index.html"><img alt="logo" src="fotos/logo2.png"></a>
 
 
 
@@ -82,9 +82,9 @@
 
         <nav>
             <ul class="list">
-                <li class="link" onclick="toggleSubmenu()"><a href="#">Social</a></li>               
-                <li class="link" onclick="cerrarSubMenu()"><a href="#">Gastronomía</a></li>
-                <li class="link" onclick="cerrarSubMenu()"><a href="dev.html">Vídeo</a></li>
+                <li class="link " onclick="toggleSubmenu()"><a href="#">Social</a></li>               
+                <li class="link " onclick="cerrarSubMenu()"><a href="#">Gastronomía</a></li>
+                <li class="link " onclick="cerrarSubMenu()"><a href="dev.html">Vídeo</a></li>
                 <li class="link" onclick="cerrarSubMenu()"><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
