--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     <header>
 
         <div class="teknofilos">
-            <a class="logo" href="index.html"><img alt="logo" src="fotos/logo2.png"></a>
-
+            <a class="logo" href="index.html"><img alt="logo" src="fotos/logo3.jpg"></a>
 
 
 
@@ -64,16 +63,16 @@
 
 
         <ul class="listaMenuMoviles">
-            <li class="submovil" onclick="abrirSubmenuSocial()">SOCIAL</li>
+            <li class="submovil" onclick="abrirSubmenuSocial()">Social</li>
             <ul class="listaMenuMoviles" id="submenuSocial">
                 <li class="subsub">BODA</li>
                 <li class="subsub">COMUNIÓN</li>
                 <li class="subsub">BAUTIZO</li>
                 <li class="subsub">FAMILIA</li>
             </ul>
-            <li class="submovil" onclick="cerrarSubmenuSocial()">GASTRONOMÍA</li>
-            <li class="submovil" onclick="cerrarSubmenuSocial()">PRODUCTO</li>
-            <li class="submovil" onclick="cerrarSubmenuSocial()">CONTACTO</li>
+            <li class="submovil" onclick="cerrarSubmenuSocial()">Gastronomía</li>
+            <li class="submovil" onclick="cerrarSubmenuSocial()">Vídeo</li>
+            <li class="submovil" onclick="cerrarSubmenuSocial()">Contacto</li>
         </ul>
 
 
