--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </ul>
             <li class="submovil" onclick="cerrarSubmenuSocial()">Gastronomía</li>
             <li class="submovil" onclick="cerrarSubmenuSocial()">Vídeo</li>
-            <li class="submovil" onclick="cerrarSubmenuSocial()">Contacto</li>
+            <li class="submovil" onclick="cerrarSubmenuSocial()"><a href="contacto.html">Contacto</a></li>
         </ul>
 
 
