--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </ul>
             <li class="submovil" onclick="cerrarSubmenuSocial()">Gastronomía</li>
             <li class="submovil" onclick="cerrarSubmenuSocial()">Vídeo</li>
-            <li class="submovil" onclick="cerrarSubmenuSocial()"><a href="contacto.html">Contacto</a></li>
+            <li class="submovil" onclick="cerrarSubmenuSocial()"><a href="contacto.html">Sobre mí</a></li>
         </ul>
 
 
@@ -84,7 +84,7 @@
                 <li class="link " onclick="toggleSubmenu()"><a href="#">Social</a></li>               
                 <li class="link " onclick="cerrarSubMenu()"><a href="#">Gastronomía</a></li>
                 <li class="link " onclick="cerrarSubMenu()"><a href="dev.html">Vídeo</a></li>
-                <li class="link" onclick="cerrarSubMenu()"><a href="contacto.html">Contacto</a></li>
+                <li class="link" onclick="cerrarSubMenu()"><a href="contacto.html">Sobre mí</a></li>
             </ul>
         </nav>
 
