--- a/index.html
+++ b/index.html
@@ -27,39 +27,9 @@
 
 
 
-            
-
-        </div>
-
-
-<!--
-        <div class="toggles">
-
-            <div>
-                <img class="corazon" src="heart-regular.svg" alt="Corazon">
-                <img class="camara" src="camera-solid.svg" alt="Camara">
-
-
-
-
-            </div>
-
-
-
-
-
-
 
 
         </div>
-
--->
-
-
-
-
-
-
 
 
         <ul class="listaMenuMoviles">
@@ -81,9 +51,9 @@
 
         <nav>
             <ul class="list">
-                <li class="link " onclick="toggleSubmenu()"><a href="#">Social</a></li>               
+                <li class="link " onclick="toggleSubmenu()"><a href="#">Social</a></li>
                 <li class="link " onclick="cerrarSubMenu()"><a href="#">Gastronomía</a></li>
-                <li class="link " onclick="cerrarSubMenu()"><a href="dev.html">Vídeo</a></li>
+                <li class="link " onclick="cerrarSubMenu()"><a href="#">Vídeo</a></li>
                 <li class="link" onclick="cerrarSubMenu()"><a href="contacto.html">Sobre mí</a></li>
             </ul>
         </nav>
@@ -107,19 +77,7 @@
             </ul>
         </nav>
 
-
-
-            
-
-
-
-
-
     </header>
-
-
-
-
 
 
     <div id="overlayH">
@@ -149,23 +107,27 @@
 
 
 
-            <img alt="surfero"              src="fotos/1.jpg" onclick="openOverlayV('fotos/1.jpg')">
+            <img alt="surfero" src="fotos/1.jpg" onclick="openOverlayV('fotos/1.jpg')">
             <img alt="familia puest de sol" src="fotos/45.jpg" onclick="openOverlayH('fotos/45.jpg')">
-            <img alt="surfero"              src="fotos/2.jpg" onclick="openOverlayV('fotos/2.jpg')">
-            <img alt="surfero surfeando"    src="fotos/4.jpg" onclick="openOverlayH('fotos/4.jpg')">
-            <img alt="comunion"             src="fotos/23.jpg" onclick="openOverlayV('fotos/23.jpg')">
+            <img alt="surfero" src="fotos/2.jpg" onclick="openOverlayV('fotos/2.jpg')">
+            <img alt="surfero surfeando" src="fotos/4.jpg" onclick="openOverlayH('fotos/4.jpg')">
+            <img alt="comunion" src="fotos/23.jpg" onclick="openOverlayV('fotos/23.jpg')">
+            <img alt="skater" src="fotos/n6.avif" onclick="openOverlayV('fotos/n6.avif')">
 
 
         </div>
 
         <div class="column">
-            <img alt="surfero surfeando"    src="fotos/12.jpg" onclick="openOverlayH('fotos/12.jpg')">
-            <img alt="bebé"                 src="fotos/41.jpg" onclick="openOverlayV('fotos/41.jpg')">
-            <img alt="mano"                 src="fotos/8.jpg" onclick="openOverlayH('fotos/8.jpg')">
+            <img alt="surfero surfeando" src="fotos/12.jpg" onclick="openOverlayH('fotos/12.jpg')">
+            <img alt="bebé" src="fotos/41.jpg" onclick="openOverlayV('fotos/41.jpg')">
+            <img alt="mano" src="fotos/8.jpg" onclick="openOverlayH('fotos/8.jpg')">
             <img alt="familia junto al mar" src="fotos/13.jpg" onclick="openOverlayH('fotos/13.jpg')">
-            <img alt="surfero"              src="fotos/10.jpg" onclick="openOverlayH('fotos/10.jpg')">
-            <img alt="comunión"             src="fotos/22.jpg" onclick="openOverlayV('fotos/22.jpg')">
-            <img alt="embarazada"           src="fotos/39.jpg" onclick="openOverlayH('fotos/39.jpg')">
+            <img alt="surfero" src="fotos/10.jpg" onclick="openOverlayH('fotos/10.jpg')">
+            <img alt="comunión" src="fotos/22.jpg" onclick="openOverlayV('fotos/22.jpg')">
+            <img alt="embarazada" src="fotos/39.jpg" onclick="openOverlayH('fotos/39.jpg')">
+            <img alt="skater" src="fotos/n7.avif" onclick="openOverlayH('fotos/n7.avif')">
+            <img alt="skater" src="fotos/n5.avif" onclick="openOverlayV('fotos/n5.avif')">
+
 
 
 
@@ -176,10 +138,10 @@
         <div class="column">
             <img alt="madre e hijo" src="fotos/17.jpg" onclick="openOverlayV('fotos/17.jpg')">
             <img alt="madre e hijo" src="fotos/18.jpg" onclick="openOverlayV('fotos/18.jpg')">
-            <img alt="bebé"         src="fotos/18.JPG" onclick="openOverlayV('fotos/18.JPG')">
-            <img alt="bebé"         src="fotos/20.jpg" onclick="openOverlayH('fotos/20.jpg')">
-            <img alt="f14"          src="fotos/20.jpg" onclick="openOverlayH('fotos/20.jpg')">
-
+            <img alt="bebé" src="fotos/n4.jpg" onclick="openOverlayH('fotos/n4.jpg')">
+            <img alt="bebé" src="fotos/20.jpg" onclick="openOverlayH('fotos/20.jpg')">
+            <img alt="f14" src="fotos/n9.avif" onclick="openOverlayV('fotos/n9.avif')">
+            <img alt="abuela y nieto" src="fotos/n1.jpg" onclick="openOverlayV('fotos/n1.jpg')">
 
 
 
@@ -187,11 +149,14 @@
 
         <div class="column">
             <img alt="comunión" src="fotos/26.jpg" onclick="openOverlayH('fotos/26.jpg')">
-            <img alt="bautizo"  src="fotos/27.jpg" onclick="openOverlayH('fotos/27.jpg')">
-            <img alt="familia"  src="fotos/28.jpg" onclick="openOverlayH('fotos/28.jpg')">
-            <img alt="bautizo"  src="fotos/29.jpg" onclick="openOverlayH('fotos/29.jpg')">
-            <img alt="familia"  src="fotos/31.jpg" onclick="openOverlayV('fotos/31.jpg')">
-            <img alt="bebé"     src="fotos/20.jpg" onclick="openOverlayH('fotos/20.jpg')">
+            <img alt="bautizo" src="fotos/27.jpg" onclick="openOverlayH('fotos/27.jpg')">
+            <img alt="familia" src="fotos/28.jpg" onclick="openOverlayH('fotos/28.jpg')">
+            <img alt="bautizo" src="fotos/29.jpg" onclick="openOverlayH('fotos/29.jpg')">
+            <img alt="familia" src="fotos/31.jpg" onclick="openOverlayV('fotos/31.jpg')">
+            <img alt="bebé" src="fotos/20.jpg" onclick="openOverlayH('fotos/20.jpg')">
+            <img alt="skater" src="fotos/n3.avif" onclick="openOverlayV('fotos/n3.avif')">
+            <img alt="skater" src="fotos/n8.avif" onclick="openOverlayH('fotos/n8.avif')">
+            <img alt="skater ia" src="fotos/n2.jpg" onclick="openOverlayH('fotos/n2.jpg')">
 
 
 
@@ -254,8 +219,8 @@
 
 
 
-            <a id="enlaceInstagram" class="logo" href="http://instagram.com/_u/neri_juarez_fotografia"><img alt="logo instagram" id="imagenLogo"
-                    src="fotos/logoInstagram.png"></a>
+            <a id="enlaceInstagram" class="logo" href="http://instagram.com/_u/neri_juarez_fotografia"><img
+                    alt="logo instagram" id="imagenLogo" src="fotos/logoInstagram.png"></a>
 
 
         </div>
@@ -266,7 +231,7 @@
 </body>
 
 
-<!--<script src="https://kit.fontawesome.com/a5dbac55d8.js" crossorigin="anonymous" async></script>-->   
+<!--<script src="https://kit.fontawesome.com/a5dbac55d8.js" crossorigin="anonymous" async></script>-->
 
 <script src="./script.js" async></script>
 
