--- a/contacto.html
+++ b/contacto.html
@@ -26,8 +26,9 @@
         <!--
         <a href="index.html"><img class="logo-contacto" src="fotos/logo3.jpg" alt="logo  NeriJuarezFotografía"></a>
         -->
-        <a href="index.html"><span id="closeButton">&times;</span></a>
+        <a onclick="volverPaginaAnterior()"><span id="closeButton">&times;</span></a>
 
+     <!--   <a href="index.html"><span id="closeButton">&times;</span></a> -->
 
         <div class="principal">
 
