--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         <ul class="listaMenuMoviles">
             <li class="submovil" onclick="abrirSubmenuSocial()">Social</li>
             <ul class="listaMenuMoviles" id="submenuSocial">
-                <li class="subsub">BODA</li>
-                <li class="subsub">COMUNIÓN</li>
-                <li class="subsub">BAUTIZO</li>
-                <li class="subsub">FAMILIA</li>
+                <li class="subsub">Boda</li>
+                <li class="subsub">Comunión</li>
+                <li class="subsub">Bautizo</li>
+                <li class="subsub">Familia</li>
             </ul>
             <li class="submovil" onclick="cerrarSubmenuSocial()">Gastronomía</li>
             <li class="submovil" onclick="cerrarSubmenuSocial()">Vídeo</li>
