--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
 
         <div class="teknofilos">
-            <a class="logo" href="index.html"><img alt="logo" src="fotos/logo3.jpg"></a>
+            <a class="logo" href="index.html"><img alt="logo" src="fotos/NeriJuárezFotografíaWhite.png"></a>
 
 
 
