--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
                 <li class="subsub">Familia</li>
             </ul>
             <li class="submovil" onclick="cerrarSubmenuSocial()">Gastronomía</li>
-            <li class="submovil" onclick="cerrarSubmenuSocial()">Vídeo</li>
+            <li class="submovil" onclick="cerrarSubmenuSocial()"><a href="video.html">Vídeo</a></li>
             <li class="submovil" onclick="cerrarSubmenuSocial()"><a href="contacto.html">Sobre mí</a></li>
         </ul>
+
+        
+
 
 
 
@@ -55,7 +58,7 @@
             <ul class="list">
                 <li class="link " onclick="toggleSubmenu()"><a href="#">Social</a></li>
                 <li class="link " onclick="cerrarSubMenu()"><a href="#">Gastronomía</a></li>
-                <li class="link " onclick="cerrarSubMenu()"><a href="#">Vídeo</a></li>
+                <li class="link " onclick="cerrarSubMenu()"><a href="video.html">Vídeo</a></li>
                 <li class="link" onclick="cerrarSubMenu()"><a href="contacto.html">Sobre mí</a></li>
             </ul>
         </nav>
