--- a/video.html
+++ b/video.html
@@ -40,7 +40,7 @@
   position: absolute;
   left: 0;
   width: 100%;
-  height: 1px;
+  height: 1%;
   background-color: white;
   transform: scaleX(0);
   transition: transform 0.40s;
@@ -136,7 +136,7 @@
 
     <div id="video-container">
         <video id="video-background" autoplay muted loop>
-          <source src="fotos/video.mp4" type="video/mp4">
+          <source src="fotos/videoComprimido.mp4" type="video/mp4">
           Tu navegador no admite la etiqueta de video.
         </video>
         <div id="content">
