--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
     <div id="overlayH">
         <img id="overlayImageH" src="fotos/1.jpg">
         <span id="closeButton">&times;</span>
-        <img src="fotos/logo.png" class="imagenLogo">
+        <img src="fotos/NeriJuárezFotografíaWhite.png" class="imagenLogo">
     </div>
 
 
     <div id="overlayV">
         <img id="overlayImageV" src="fotos/1.jpg">
         <span id="closeButton">&times;</span>
-        <img src="fotos/logo.png" class="imagenLogo">
+        <img src="fotos/NeriJuárezFotografíaWhite.png" class="imagenLogo">
     </div>
 
 
