--- a/video.html
+++ b/video.html
@@ -141,10 +141,25 @@
 
 
     <div id="video-container">
+
+
+        <video id="video-background" autoplay muted loop playsinline>
+            <source src="fotos/videoComprimido.mp4" type="video/mp4">
+            Tu navegador no admite la etiqueta de video.
+        </video>
+          
+
+
+
+        <!--
         <video id="video-background" autoplay muted loop>
           <source src="fotos/videoComprimido.mp4" type="video/mp4">
           Tu navegador no admite la etiqueta de video.
         </video>
+    -->
+
+
+
         <div id="content">
 
             <header>
