--- a/gastronomia.html
+++ b/gastronomia.html
@@ -47,7 +47,7 @@
                 <li class="subsub">Familia</li>
             </ul>
             -->
-            <li class="submovil" onclick="cerrarSubmenuSocial()">Gastronomía</li>
+            <li class="submovil"  onclick="cerrarSubmenuSocial()"><a id="marcarAbajo">Gastronomía</a></li>
             <li class="submovil" onclick="cerrarSubmenuSocial()"><a href="video.html">Vídeo</a></li>
             <li class="submovil" onclick="cerrarSubmenuSocial()"><a href="contacto.html">Sobre mí</a></li>
         </ul>
@@ -62,7 +62,7 @@
         <nav>
             <ul class="list">
                 <li class="link " onclick="toggleSubmenu()"><a href="social.html">Social</a></li>
-                <li class="link " onclick="cerrarSubMenu()"><a href="gastronomia.html">Gastronomía</a></li>
+                <li id="marcarPagina" onclick="cerrarSubMenu()"><a href="gastronomia.html">Gastronomía</a></li>
                 <li class="link " onclick="cerrarSubMenu()"><a href="video.html">Vídeo</a></li>
                 <li class="link" onclick="cerrarSubMenu()"><a href="contacto.html">Sobre mí</a></li>
             </ul>
