--- a/social.html
+++ b/social.html
@@ -17,6 +17,8 @@
 
     <title>NeriJuarezFotografía</title>
 
+    
+
 
 
 </head>
@@ -38,7 +40,7 @@
 
 
         <ul class="listaMenuMoviles">
-            <li class="submovil"><a href="social.html">Social</a></li>
+            <li class="submovil" onclick="abrirSubmenuSocial()"><a id="marcarAbajo">Social</a></li>
             <!--
             <ul class="listaMenuMoviles" id="submenuSocial">
                 <li class="subsub">Boda</li>
@@ -47,7 +49,7 @@
                 <li class="subsub">Familia</li>
             </ul>
             -->
-            <li class="submovil" onclick="cerrarSubmenuSocial()">Gastronomía</li>
+            <li class="submovil" onclick="cerrarSubmenuSocial()"><a href="gastronomia.html">Gastronomía</li>
             <li class="submovil" onclick="cerrarSubmenuSocial()"><a href="video.html">Vídeo</a></li>
             <li class="submovil" onclick="cerrarSubmenuSocial()"><a href="contacto.html">Sobre mí</a></li>
         </ul>
@@ -61,9 +63,9 @@
 
         <nav>
             <ul class="list">
-                <li class="link " onclick="toggleSubmenu()"><a href="social.html">Social</a></li>
+                <li  id="marcarPagina" onclick="toggleSubmenu()"><a href="#">Social</a></li>
                 <li class="link " onclick="cerrarSubMenu()"><a href="gastronomia.html">Gastronomía</a></li>
-                <li class="link " onclick="cerrarSubMenu()"><a href="video.html">Vídeo</a></li>
+                <li class="link "  onclick="cerrarSubMenu()"><a href="video.html">Vídeo</a></li>
                 <li class="link" onclick="cerrarSubMenu()"><a href="contacto.html">Sobre mí</a></li>
             </ul>
         </nav>
