--- a/video.html
+++ b/video.html
@@ -170,7 +170,7 @@
 
 
         <video id="video-background" autoplay muted loop playsinline preload="metadata">
-            <source src="fotos/video.mp4" type="video/mp4">
+            <source src="fotos/videoComprimido.mp4" type="video/mp4">
             Tu navegador no admite la etiqueta de video.
         </video>
 
