--- a/video.html
+++ b/video.html
@@ -232,7 +232,7 @@
                         <li class="subsub subvideo">Familia</li>
                     </ul>
                     -->
-                    <li class="submovil subvideo" onclick="cerrarSubmenuSocial()">Gastronomía</li>
+                    <li class="submovil subvideo" onclick="cerrarSubmenuSocial()"><a href="gastronomia.html">Gastronomía</a></li>
                     <li class="submovil subvideo" onclick="cerrarSubmenuSocial()"><a href="video.html" id="marcarAbajoVideo">Vídeo</a></li>
                     <li class="submovil subvideo" onclick="cerrarSubmenuSocial()"><a href="contacto.html">Sobre mí</a></li>
                 </ul>
